syntax = "proto3";
package orderer.sraft;

option go_package = "./protos/orderer";

message AppendShardRequest {
    uint64 term = 1;
    string leader_id = 2;
    repeated bytes entries = 3;
    uint64 leader_commit = 4;
    string zone_id = 5; // For hierarchical leadership
}

message AppendShardResponse {
    uint64 term = 1;
    bool success = 2;
    uint64 last_index = 3;
}

service SRaft {
    rpc AppendShard(AppendShardRequest) returns (AppendShardResponse);
}